--- a/public/form.html
+++ b/public/form.html
@@ -9,8 +9,8 @@
 
    <body>
       <form id='login-form' action="" method='post'>
-         <input name="username" type="text" placeholder="Username" required>
-         <input name="password" type="password" placeholder="Password" required>
+         <input name="username" type="text" placeholder="Username" required id="username">
+         <input name="password" type="password" placeholder="Password" required id="password">
          <button type='submit'>Login</button>
          <label for='form-switch'>
          </label>
