--- a/public/store.html
+++ b/public/store.html
@@ -11,10 +11,11 @@
    </head>
 
    <body>
+
       <div class="container">
          <h3>UWAW STORE</h3>
          <div class="row">
-            <div class="col-10">
+            <div class="col-7">
                <table id="products_table" class="table table-primary table-hover table-bordered" style="width:100%">
                   <thead>
                      <tr>
@@ -22,15 +23,35 @@
                         <th class="text-center">Name</th>
                         <th class="text-center">Description</th>
                         <th class="text-center">Price</th>
-                        <th class="text-center">Stock</th>
+                        <th class="text-center">Add</th>
+                     </tr>
+                  </thead>
+                  <tbody class="table"></tbody>
+               </table>
+            </div>
+            <div id="cart" class="col-5">
+               <h4>Your Buying Cart</h4>
+               <br/>
+               <div class="row">
+                  <div class="col-6">
+                     <div class="float-left">Total: </div>
+                     <div id="price" class="float-right"></div>
+                  </div>
+               </div>
+               </tr>
+               <table id="cartList" class="table table-primary table-hover table-bordered" style="width:100%">
+                  <thead>
+                     <tr>
+                        <th class="text-center">ID</th>
+                        <th class="text-center">Name</th>
+                        <th class="text-center">Quantity</th>
+                        <th class="text-center">Subtotal</th>
+                        <th></th>
                      </tr>
                   </thead>
                   <tbody class="table">
                   </tbody>
                </table>
-            </div>
-            <div id="cart" class="col-2">
-               <p>cart</p>
             </div>
          </div>
       </div>
@@ -41,6 +62,8 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
          crossorigin="anonymous"></script>
       <script src="/productsTable.js"></script>
+      <script src="/cartList.js"></script>
+
    </body>
 
    </html>
