--- a/public/store.html
+++ b/public/store.html
@@ -6,14 +6,34 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
          crossorigin="anonymous">
-      <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.css"> -->
+      <link rel="stylesheet" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
       <title>Uwaw Store Item List</title>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script>
+         if (localStorage.getItem('tokennya')) {
+            $.ajax({
+               type: 'GET',
+               url: `http://localhost:3000/api/users/?id=${JSON.parse(localStorage.getItem('tokennya')).id}`,
+               contentType: "application/json; charset=utf-8",
+               success: function (res) {
+                  JSON.parse(localStorage.getItem('tokennya')).tokennya === res[0].token ? console.log('Welcome to Uwaw Store') : window.location = '/login.html'
+               }
+            })
+         } else { window.location = '/login.html' }
+      </script>
    </head>
 
    <body>
 
-      <div class="container">
-         <h3>UWAW STORE</h3>
+      <div class="container p-4">
+         <div class="row">
+            <div class="col-5">
+               <h3>UWAW STORE</h3>
+            </div>
+            <div class="col-7">
+               <button id="logout" onclick="logout()">Log Out</button>
+            </div>
+         </div>
          <div class="row">
             <div class="col-7">
                <table id="products_table" class="table table-primary table-hover table-bordered" style="width:100%">
@@ -37,6 +57,9 @@
                      <div class="float-left">Total: </div>
                      <div id="price" class="float-right"></div>
                   </div>
+                  <div class="col-6">
+                     <button id="checkout" onclick="checkout()">Check Out</button>
+                  </div>
                </div>
                </tr>
                <table id="cartList" class="table table-primary table-hover table-bordered" style="width:100%">
@@ -55,14 +78,21 @@
             </div>
          </div>
       </div>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-         crossorigin="anonymous"></script>
+      <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
          crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
          crossorigin="anonymous"></script>
+      <script src='/jquery.twbsPagination.min.js'></script>
       <script src="/productsTable.js"></script>
       <script src="/cartList.js"></script>
+      <script src='/checkout.js'></script>
+      <script>
+         function logout() {
+            window.location = '/login.html'
+            localStorage.clear()
+         }
+      </script>
 
    </body>
 
