--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
                url: `http://localhost:3000/api/users/?id=${JSON.parse(localStorage.getItem('tokennya')).id}`,
                contentType: "application/json; charset=utf-8",
                success: function (res) {
-                  JSON.parse(localStorage.getItem('tokennya')).tokennya ? window.location = '/store.html' : console.log('ok')
+                  JSON.parse(localStorage.getItem('tokennya')).tokennya ? window.location = '/store.html' : console.log('Welcome to Uwaw Store')
                }
             })
          )
