--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,7 @@
    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
    <script>
+      if (localStorage.getItem('tokennya')) {
          $(document).onload(
             $.ajax({
                type: 'GET',
@@ -21,7 +22,8 @@
                }
             })
          )
-      </script>
+      } else { console.log('Welcome to Uwaw Store') }
+   </script>
 </head>
 
 <body>
