--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,7 @@
          $(document).onload(
             $.ajax({
                type: 'GET',
-               url: `http://localhost:3000/api/users/?id=${JSON.parse(localStorage.getItem('tokennya')).id}`,
+               url: `/api/users/?id=${JSON.parse(localStorage.getItem('tokennya')).id}`,
                contentType: "application/json; charset=utf-8",
                success: function (res) {
                   JSON.parse(localStorage.getItem('tokennya')).tokennya ? window.location = '/store.html' : console.log('Welcome to Uwaw Store')
