--- a/public/payment.html
+++ b/public/payment.html
@@ -11,7 +11,7 @@
       if (localStorage.getItem('tokennya')) {
          $.ajax({
             type: 'GET',
-            url: `http://localhost:3000/api/users/?id=${JSON.parse(localStorage.getItem('tokennya')).id}`,
+            url: `/api/users/?id=${JSON.parse(localStorage.getItem('tokennya')).id}`,
             contentType: "application/json; charset=utf-8",
             success: function (res) {
                JSON.parse(localStorage.getItem('tokennya')).tokennya === res[0].token ? console.log('Welcome to Uwaw Store') : window.location = '/form.html'
@@ -29,7 +29,7 @@
          const cart = localStorage.getItem('cart')
          $.ajax({
             type: "POST",
-            url: "http://localhost:3000/api/payment",
+            url: "/api/payment",
             headers: {
                Accept: "application/json",
                "Content-Type": "application/json"
